// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPicker ColorItem renders given color and does nothing when clicked without specified onClick handler 1`] = `
<div>
  <span
    class="reactist color_item"
    data-testid="reactist-color-item"
    style="background-color: rgb(96, 96, 96);"
  >
    <span
      class="color_item--inner_ring"
    />
  </span>
</div>
`;

exports[`ColorPicker renders with custom colorList 1`] = `
<div>
  <div
    class="reactist_dropdown reactist_color_picker"
    style="display: inline-block;"
  >
    <button
      aria-disabled="false"
      class="reactist_button trigger"
      type="button"
    >
      <span
        class="color_trigger"
        style="background-color: red;"
      >
        <span
          class="color_trigger--inner_ring"
        />
      </span>
    </button>
    <div
      class="body_wrapper with_arrow bottom"
      style="position: relative;"
    >
      <div
        class="body"
        id="reactist-dropdown-body"
        style="position: absolute; top: 0px; left: 0px;"
      >
        <div
          class="color_options"
        >
          <span
            class="reactist color_item active"
            data-testid="reactist-color-item"
            style="background-color: red;"
          >
            <span
              class="color_item--inner_ring"
            />
          </span>
          <span
            class="reactist color_item"
            data-testid="reactist-color-item"
            style="background-color: green;"
          >
            <span
              class="color_item--inner_ring"
            />
          </span>
          <span
            class="reactist color_item"
            data-testid="reactist-color-item"
            style="background-color: rgb(0, 0, 255);"
          >
            <span
              class="color_item--inner_ring"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker renders without crashing 1`] = `
<div>
  <div
    class="reactist_dropdown reactist_color_picker"
    style="display: inline-block;"
  >
    <button
      aria-disabled="false"
      class="reactist_button trigger"
      type="button"
    >
      <span
        class="color_trigger"
        style="background-color: rgb(96, 96, 96);"
      >
        <span
          class="color_trigger--inner_ring"
        />
      </span>
    </button>
    <div
      class="body_wrapper with_arrow bottom"
      style="position: relative;"
    >
      <div
        class="body"
        id="reactist-dropdown-body"
        style="position: absolute; top: 0px; left: 0px;"
      >
        <div
          class="color_options"
        >
          <span
            class="reactist color_item active"
            data-testid="reactist-color-item"
            style="background-color: rgb(96, 96, 96);"
          >
            <span
              class="color_item--inner_ring"
            />
          </span>
          <span
            class="reactist color_item"
            data-testid="reactist-color-item"
            style="background-color: rgb(74, 144, 226);"
          >
            <span
              class="color_item--inner_ring"
            />
          </span>
          <span
            class="reactist color_item"
            data-testid="reactist-color-item"
            style="background-color: rgb(3, 179, 178);"
          >
            <span
              class="color_item--inner_ring"
            />
          </span>
          <span
            class="reactist color_item"
            data-testid="reactist-color-item"
            style="background-color: rgb(0, 130, 153);"
          >
            <span
              class="color_item--inner_ring"
            />
          </span>
          <span
            class="reactist color_item"
            data-testid="reactist-color-item"
            style="background-color: rgb(130, 186, 0);"
          >
            <span
              class="color_item--inner_ring"
            />
          </span>
          <span
            class="reactist color_item"
            data-testid="reactist-color-item"
            style="background-color: rgb(210, 71, 38);"
          >
            <span
              class="color_item--inner_ring"
            />
          </span>
          <span
            class="reactist color_item"
            data-testid="reactist-color-item"
            style="background-color: rgb(172, 25, 61);"
          >
            <span
              class="color_item--inner_ring"
            />
          </span>
          <span
            class="reactist color_item"
            data-testid="reactist-color-item"
            style="background-color: rgb(220, 79, 173);"
          >
            <span
              class="color_item--inner_ring"
            />
          </span>
          <span
            class="reactist color_item"
            data-testid="reactist-color-item"
            style="background-color: rgb(59, 213, 251);"
          >
            <span
              class="color_item--inner_ring"
            />
          </span>
          <span
            class="reactist color_item"
            data-testid="reactist-color-item"
            style="background-color: rgb(116, 232, 211);"
          >
            <span
              class="color_item--inner_ring"
            />
          </span>
          <span
            class="reactist color_item"
            data-testid="reactist-color-item"
            style="background-color: rgb(255, 204, 0);"
          >
            <span
              class="color_item--inner_ring"
            />
          </span>
          <span
            class="reactist color_item"
            data-testid="reactist-color-item"
            style="background-color: rgb(251, 136, 110);"
          >
            <span
              class="color_item--inner_ring"
            />
          </span>
          <span
            class="reactist color_item"
            data-testid="reactist-color-item"
            style="background-color: rgb(204, 204, 204);"
          >
            <span
              class="color_item--inner_ring"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
